cmake_minimum_required(VERSION 3.16)
project(DatasetInspector LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS Widgets Concurrent)

qt_standard_project_setup()

qt_add_executable(DatasetInspector
  src/main.cpp
  src/MainWindow.h src/MainWindow.cpp
  src/CsvTableModel.h src/CsvTableModel.cpp
  src/CsvLoader.h src/CsvLoader.cpp
)

target_link_libraries(DatasetInspector PRIVATE Qt6::Widgets Qt6::Concurrent)
